--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "react": "16.6.3",
-    "react-native": "0.58.6"
+    "react-native": "0.58.6",
+    "recompose": "^0.30.0",
+    "styled-components": "^4.1.3"
   },
   "devDependencies": {
     "babel-core": "^7.0.0-bridge.0",
